# cypher-client-v3

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
cypher-client/: Cargo.toml  idl.json
cypher-client/src/: aob.rs  constants.rs  instructions.rs  lib.rs  serum.rs  utils.rs
cypher-utils/: Cargo.toml
cypher-utils/examples/: chain_meta.rs  orderbook_stream.rs
cypher-utils/src/: accounts_cache.rs  constants.rs  lib.rs  logging.rs  transaction_builder.rs  utils.rs
cypher-utils/src/contexts/: cache.rs  cypher.rs  event_queue.rs  market.rs  mod.rs  open_orders.rs  orderbook.rs  pool.rs  user.rs
cypher-utils/src/services/: chain_meta.rs  chain_meta_service.rs  mod.rs  streaming.rs  utils.rs
faucet-client/: Cargo.toml  idl.json
faucet-client/src/: lib.rs
lip-client/: Cargo.toml  idl.json
lip-client/src/: constants.rs  instructions.rs  lib.rs  utils.rs
