[package]
authors = ["Hugo <hoak@offpiste.io>"]
description = "Utilities for cypher v3."
edition = "2021"
keywords = ["solana", "workers", "utilities"]
license = "Apache-2.0"
name = "cypher-utils"
version = "3.0.0"

[features]
default = [ "devnet" ]
devnet = [ "anchor-spl/devnet", "cypher-client/devnet" ]
mainnet-beta = [ "cypher-client/mainnet-beta" ]

[dependencies]
agnostic-orderbook = { git = "https://github.com/chugach-foundation/agnostic-orderbook.git" }
anchor-lang = "0.26.0"
anchor-spl = { version = "0.26.0", features = [ "token", "associated_token", "dex" ]}
arrayref = "0.3.6"
async-trait = "0.1.58"
base64 = "0.13.0"
bytemuck = "1.4.0"
chrono = "0.4.19"
cypher-client = { path = "../cypher-client/" }
dashmap = "5.3.4"
fixed = { version = ">=1.11.0, <1.12.0", features = ["serde"] }
futures = "0.3.21"
log = "0.4.17"
num-traits = "0.2"
solana-account-decoder = "~1.14.12"
solana-client = "~1.14.12"
solana-sdk = "~1.14.12"
thiserror = "1.0.31"
tokio = "1.14.1"